--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1523,6 +1523,19 @@ body {
   margin: 0;
 }
 
+.range-input:hover {
+  opacity: 0.6;
+}
+
+.range-input:active {
+  background: #756257;
+}
+
+.range-input:focus {
+  box-shadow: 0px 0px 0px 3px #81B3D2;
+  outline: 0;
+}
+
 .range-scale {
   position: relative;
   height: 4px;
@@ -1566,6 +1579,7 @@ body {
   -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+  outline: 0;
 }
 
 .toggle-min {
