--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1850,12 +1850,12 @@ body {
 
 .button-plus,
 .butten-minus {
-  background: #F2F2F2;
+  background-color: #F2F2F2;
+  opacity: 0.3;
   border-radius: 4px;
   border: 0;
   padding: 0;
   margin: 0;
-  opacity: 0.3;
   cursor: pointer;
 }
 
@@ -2001,12 +2001,13 @@ body {
 
 .text-input:active {
   background-color: #FFFFFF;
-  border: #000000;
+  border: 2px solid #000000;
 }
 
 .text-input:focus {
-  background: #E6E6E6;
-  border: #83B3D3;
+  background-color: #E6E6E6;
+  border: 3px solid #83B3D3;
+  outline: 0;
 }
 
 .button-find:hover {
@@ -2032,8 +2033,8 @@ body {
 }
 
 .butten-minus:focus {
-  opacity: 1;
-  border: #83B3D3;
+  border-color: #83B3D3;
+  outline: 0;
 }
 
 .button-plus:hover {
@@ -2046,5 +2047,5 @@ body {
 
 .button-plus:focus {
   opacity: 1;
-  border: #83B3D3;
+  border-color: #83B3D3;
 }
