--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2002,12 +2002,11 @@ body {
 
 .text-input:active {
   background-color: #FFFFFF;
-  border: 2px solid #000000;
+  border-color: #000000;
 }
 
 .text-input:focus {
-  background-color: #E6E6E6;
-  border: 3px solid #83B3D3;
+  border-color: #83B3D3;
   outline: 0;
 }
 
