--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2005,10 +2005,6 @@ body {
   display: block;
 }
 
-.arrow-tooltip {
-  display: block;
-}
-
 .tooltip-toggle:hover + .arrow-tooltip
 .tooltip-toggle:focus + .arrow-tooltip {
   display: block;
@@ -2033,6 +2029,11 @@ body {
 .text-input:active {
   background-color: #FFFFFF;
   border: 2px solid #000000;
+}
+
+.text-input:focus {
+  border: 3px solid #83B3D3;
+  outline: 0;
 }
 
 .text-input:focus {
